<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_signal_strength_json"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ap_signal_strength_json"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_list"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="18sp" />
        </ScrollView>
    </LinearLayout>
    <!--<Button
            android:id="@+id/ap_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:text="@string/ap_list_button"
            android:textSize="16sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/x_coordinate_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:hint="@string/x_coordinate_input"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/y_coordinate_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:hint="@string/y_coordinate_input"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/save_button"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>